# ai-game-demo

space-wars/: CMakeLists.txt  README.md  TESTING-UBUNTU.md  config.example.txt  test-build-ubuntu.sh
space-wars/src/: ConfigReader.cpp  ConfigReader.h  Constants.h  Craft.hpp  Explosion.hpp  Game.cpp  Game.h  GameState.cpp  GameState.h  InputHandler.cpp  InputHandler.h  NetworkManager.cpp  NetworkManager.h  Projectile.cpp  Projectile.h  Renderer.cpp  Renderer.h  Spacecraft.cpp  Spacecraft.h  Thrust.hpp  main.cpp
space-wars/tasks/: prd-space-wars.md  tasks-space-wars.md
